2006-02-18  James Willcox  <snorp@snorp.net>

	* src/Banshee.Base/SourceManager.cs: emit the
	ActiveChanged event in the main thread.
	* src/Banshee.Widgets/CoverArtThumbnail.cs: fix the nasty
	flashing problem that occurred when the popup appears
	above the thumbnail.
	* src/SourceView.cs: don't allow a source to be added
	more than once.

2006-02-15  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.ac: Added "it" (Italian) to ALL_LINGUAS.

2006-02-14  Chris Toshok  <toshok@ximian.com>

	* src/Banshee.Base/NetworkDetect.cs: rename "last_state" to
	"current_state", and make get_Connected just consult that field,
	instead of using nm_manager.State (which requires a dbus rpc).
	Fixes gc/dbus related hang.

2006-02-13  James Willcox  <snorp@snorp.net>

	* nuke all the (incorrect) emacs mode lines

2006-02-13  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/MetadataSearch/MetadataSearchPlugin.cs:
	Add a IsScanning property.  When in album cover only mode, don't
	try to lookup the same album more than once.
	* src/Banshee.Plugins/MetadataSearch/MetadataSearchConfDialog.cs:
	Add a 'Rescan Library' button.

2006-02-13  Aaron Bockover  <aaron@abock.org>
	
	* src/BansheeDbusClient.cs: Fixed interface name

2006-02-13  Aaron Bockover  <aaron@abock.org>

	Banshee 0.10.6 Released

	* NEWS: Updated with 0.10.6 release notes

	* src/PlayerInterface.cs: Do not show 'Consider Importing...' notices
	in status bar: it's unnecessary and a little brusque

2006-02-13  Aaron Bockover  <aaron@abock.org>

	* configure.ac: Version 0.10.6

	* src/Banshee.Base/Utilities.cs (SetProcessName): Use IntPtr instead
	of ulong to avoid potential 64 bit issues

	* src/RemotePlayer.cs: Fix a potential dbus-sharp crash (BGO #330903) 
	
	* src/Banshee.Widgets/VolumeButton.cs: Adjust volume fix (BGO #330524)

	* src/Banshee.Dap/Ipod/DatabaseRebuilder.cs: Handle the exceptions
	SongDatabase.Save may throw, display error to user

2006-02-12  Aaron Bockover  <aaron@abock.org>
